test/valid/array_init.csmall
int main() {
	int myArray[10] = {0,1,2,3,4,5,6,7,8,9};
	printf("myArray[5] = %i", myArray[5]);
	return 0;
}