test/errors/invalidarrayassign.csmall
int main() {
	int a[5] = {0, 1, 2, 3, 4;
	
	return 0;
}